Adds plotting tool, license, and readme

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "lmar"
 version = "0.1.0"
 edition = "2021"
+license = "MPL 2.0"
+authors = ["Benjamin Naecker <ben@oxide.computer>"]
 
 [dependencies]
 bytes = "1.1.0"
