--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ license = "MPL 2.0"
 authors = ["Benjamin Naecker <ben@oxide.computer>"]
 
 [dependencies]
+anyhow = "1.0.71"
 bytes = "1.1.0"
 chrono = "0.4.19"
 clap = { version = "3.1.18", features = [ "derive" ] }
