Support margining lanes in parallel
- Adds support for multiple lanes on the command-line
- Moves margining protocol into a separate method
- Spawn a thread for each lane, and run the margin protocol in it. The
  updates are sent to the main thread for printing and saving to disk.
- Adds some progress bars.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ anyhow = "1.0.71"
 bytes = "1.1.0"
 chrono = "0.4.19"
 clap = { version = "3.1.18", features = [ "derive" ] }
+indicatif = "0.17.4"
 libc = "0.2.122"
 thiserror = "1.0.30"
