--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ anyhow = "1.0.71"
 bytes = "1.1.0"
 chrono = "0.4.19"
 clap = { version = "3.1.18", features = [ "derive" ] }
+devinfo = "0.1.0"
 indicatif = "0.17.4"
 libc = "0.2.122"
 thiserror = "1.0.30"
+walkdir = "2.5.0"
+zip = "2.5.0"
